--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -29,6 +29,23 @@
             <form id="tag-form" action="/tagging" method="post">
 
                 <!-- ... your code here ... -->
+                <fieldset>
+                    <legend>
+                        Add a new GeoTag
+                    </legend>
+                    <label for="latitude">Latitude:</label><br>
+                    <input type="number" name="latitude" id="latitude" readonly><br>
+
+                    <label for="longitude">Longitude:</label><br>
+                    <input type="number" name="longitude" id="longitude" readonly><br>
+
+                    <label for="tagName">Name:</label><br>
+                    <input type="number" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required><br>
+
+                    <label for="hashtag">Hashtag</label><br>
+                    <input type="number" name="hashtag" id="hashtag" placeholder="e.g. #ber" pattern="#[A-Za-z0-9]+" maxlength="10"><br>
+                    <button>Add Tag</button>
+                </fieldset>
 
             </form>
             <!-- ############### VS1Lab 1a Form 1 End -->
@@ -40,7 +57,12 @@
 
             <!-- ############### VS1Lab 1a Form 2 Start -->
             <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
-
+                <fieldset>
+                    <legend>Search</legend>
+                    <label for="search_input">Search term or keywords:</label><br>
+                    <input type="search" id="search_input" placeholder="e.g. Berlin"><br>
+                    <button id="submit_search">Search</button>
+                </fieldset>
                 <!-- ... your code here ... -->
 
             </form>
