--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -13,81 +13,83 @@
 </head>
 
 <body>
-    <header class="header">
-        <img src="./images/location.png" class="header__image" alt="an image of a map and location">
-        <h1 class="header__title">GeoTagApp</h1>
-        <nav class="header__navigation">
-            <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
-        </nav>
-    </header>
+        <header class="header">
+            <img src="./images/location.png" class="header__image" alt="an image of a map and location">
+            <h1 class="header__title">GeoTagApp</h1>
+            <nav class="header__navigation">
+                <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
+            </nav>
+        </header>
 
-    <main class="main">
-        <section class="main__tagging tagging">
-            <h2>Tagging</h2>
+        <main class="main">
+            <section class="main__tagging tagging">
+                <h2>Tagging</h2>
 
-            <!-- ############### VS1Lab 1a Form 1 Start -->
-            <form id="tag-form" action="/tagging" method="post">
+                <!-- ############### VS1Lab 1a Form 1 Start -->
+                <form id="tag-form" action="/tagging" method="post">
 
-                <!-- ... your code here ... -->
-                <fieldset>
-                    <legend>
-                        Add a new GeoTag
-                    </legend>
-                    <label for="latitude">Latitude:</label><br>
-                    <input type="number" name="latitude" id="latitude" readonly><br>
+                    <!-- ... your code here ... -->
+                    <fieldset>
+                        <legend>
+                            Add a new GeoTag
+                        </legend>
+                        <label for="latitude">Latitude:</label><br>
+                        <input type="number" name="latitude" id="latitude" readonly><br>
 
-                    <label for="longitude">Longitude:</label><br>
-                    <input type="number" name="longitude" id="longitude" readonly><br>
+                        <label for="longitude">Longitude:</label><br>
+                        <input type="number" name="longitude" id="longitude" readonly><br>
 
-                    <label for="tagName">Name:</label><br>
-                    <input type="number" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required><br>
+                        <label for="tagName">Name:</label><br>
+                        <input type="text" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required><br>
 
-                    <label for="hashtag">Hashtag</label><br>
-                    <input type="number" name="hashtag" id="hashtag" placeholder="e.g. #ber" pattern="#[A-Za-z0-9]+" maxlength="10"><br>
-                    <button>Add Tag</button>
-                </fieldset>
+                        <label for="hashtag">Hashtag:</label><br>
+                        <input type="text" name="hashtag" id="hashtag" placeholder="e.g. #ber" pattern="#[A-Za-z0-9]+" maxlength="10"><br>
+                        <button class="add_tag" id="add_tag">Add Tag</button>
+                    </fieldset>
 
-            </form>
-            <!-- ############### VS1Lab 1a Form 1 End -->
+                </form>
+                <!-- ############### VS1Lab 1a Form 1 End -->
 
-        </section>
+            </section>
 
-        <section class="main__discovery discovery">
-            <h2 class="discovery__title">Discovery</h2>
+            <section class="main__discovery discovery">
+                <h2 class="discovery__title">Discovery</h2>
 
-            <!-- ############### VS1Lab 1a Form 2 Start -->
-            <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
-                <fieldset>
-                    <legend>Search</legend>
-                    <label for="search_input">Search term or keywords:</label><br>
-                    <input type="search" id="search_input" placeholder="e.g. Berlin"><br>
-                    <button id="submit_search">Search</button>
-                </fieldset>
-                <!-- ... your code here ... -->
+                <!-- ############### VS1Lab 1a Form 2 Start -->
+                <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
+                    <fieldset>
+                        <legend>Search</legend>
+                        <div class="search_input_container">
+                            <label for="search_input">Search term or keywords:</label><br>
+                            <input type="search" id="search_input" placeholder="e.g. Berlin"><br>
+                            <button class="submit_search" id="submit_search">Search</button>
+                        </div>
+                    </fieldset>
+                    <!-- ... your code here ... -->
 
-            </form>
-            <!-- ############### VS1Lab 1a Form 2 End -->
+                </form>
+                <!-- ############### VS1Lab 1a Form 2 End -->
 
-            <div class="discovery__wrapper">
-                <div class="discovery__taglist">
-                    <ul class="discovery__results" id="discoveryResults">
-                        <li>Castle (49.01379, 8.404435) #sight</li>
-                        <li>IWI (49.01379, 8.390071) #edu</li>
-                    </ul>
+                <div class="discovery__wrapper">
+                    <div class="discovery__taglist">
+                        <ul class="discovery__results" id="discoveryResults">
+                            <li>Castle (49.01379, 8.404435)<br> #sight</li>
+                            <li>IWI (49.01379, 8.390071)<br> #edu</li>
+                        </ul>
+                    </div>
+
+                    <div class="discovery__map">
+                        <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
+                        <span>Result map</span>
+                    </div>
                 </div>
+            </section>
 
-                <div class="discovery__map">
-                    <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
-                    <span>Result map</span>
-                </div>
-            </div>
-        </section>
+        </main>
 
-    </main>
-
-    <footer class="footer">
-        <span>(c) 2021/22 HKA_IWI_VSYS</span>
-    </footer>
+        <footer class="footer">
+            <span>(c) 2021/22 HKA_IWI_VSYS</span>
+        </footer>
 </body>
 
 </html>
