formulare & design - complete

--- a/Aufgabe1/gta_v1/public/index.html
+++ b/Aufgabe1/gta_v1/public/index.html
@@ -34,10 +34,10 @@
                             Add a new GeoTag
                         </legend>
                         <label for="latitude">Latitude:</label><br>
-                        <input type="number" name="latitude" id="latitude" readonly><br>
+                        <input type="number" name="latitude" id="latitude" placeholder="49.01379" disabled><br>
 
                         <label for="longitude">Longitude:</label><br>
-                        <input type="number" name="longitude" id="longitude" readonly><br>
+                        <input type="number" name="longitude" id="longitude" placeholder="8.390071" disabled><br>
 
                         <label for="tagName">Name:</label><br>
                         <input type="text" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required><br>
