--- a/Aufgabe2/gta_v2/public/index.html
+++ b/Aufgabe2/gta_v2/public/index.html
@@ -13,83 +13,91 @@
 </head>
 
 <body>
-        <header class="header">
-            <img src="./images/location.png" class="header__image" alt="an image of a map and location">
-            <h1 class="header__title">GeoTagApp</h1>
-            <nav class="header__navigation">
-                <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
-            </nav>
-        </header>
+    <header class="header">
+        <img src="./images/location.png" class="header__image" alt="an image of a map and location">
+        <h1 class="header__title">GeoTagApp</h1>
+        <nav class="header__navigation">
+            <a href="#">About</a> | <a href="#">Help</a> | <a href="/">Home</a>
+        </nav>
+    </header>
 
-        <main class="main">
-            <section class="main__tagging tagging">
-                <h2>Tagging</h2>
+    <main class="main">
+        <section class="main__tagging tagging col-3 col-m-5 col-s-10">
+            <h2>Tagging</h2>
 
-                <!-- ############### VS1Lab 1a Form 1 Start -->
-                <form id="tag-form" action="/tagging" method="post">
+            <!-- ############### VS1Lab 1a Form 1 Start -->
+            <form id="tag-form" action="/tagging" method="post">
 
-                    <!-- ... your code here ... -->
-                    <fieldset>
-                        <legend>
-                            Add a new GeoTag
-                        </legend>
+                <!-- ... your code here ... -->
+                <fieldset class="tagging_field">
+                    <legend>
+                        Add a new GeoTag
+                    </legend>
+                    <div class="tagging__wrapper">
                         <label for="latitude">Latitude:</label>
-                        <input type="number" name="latitude" id="latitude" placeholder="49.01379" disabled>
+                        <input type="text" name="latitude" id="latitude" placeholder="49.67849" value="" disabled>
 
                         <label for="longitude">Longitude:</label>
-                        <input type="number" name="longitude" id="longitude" placeholder="8.390071" disabled>
+                        <input type="text" name="longitude" id="longitude" placeholder="3.76895" value="" disabled>
 
                         <label for="tagName">Name:</label>
                         <input type="text" name="tagName" id="tagName" placeholder="e.g. Central Berlin" maxlength="10" required>
 
                         <label for="hashtag">Hashtag:</label>
                         <input type="text" name="hashtag" id="hashtag" placeholder="e.g. #ber" pattern="#[A-Za-z0-9]+" maxlength="10">
-                        <button class="add_tag" id="add_tag">Add Tag</button>
-                    </fieldset>
+                        <button>Add Tag</button>
+                    </div> 
+                </fieldset>
 
-                </form>
-                <!-- ############### VS1Lab 1a Form 1 End -->
+            </form>
+            <!-- ############### VS1Lab 1a Form 1 End -->
 
-            </section>
+        </section>
 
-            <section class="main__discovery discovery">
-                <h2 class="discovery__title">Discovery</h2>
+        <section class="main__discovery discovery col-5 col-s-10">
+            <h2 class="discovery__title">Discovery</h2>
 
-                <!-- ############### VS1Lab 1a Form 2 Start -->
-                <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
-                    <fieldset>
-                        <legend>Search</legend>
-                        <div class="search_input_container">
-                            <label for="search_input">Search term or keywords:</label>
-                            <input type="search" id="search_input" placeholder="e.g. Berlin">
-                            <button class="submit_search" id="submit_search">Search</button>
-                        </div>
-                    </fieldset>
-                    <!-- ... your code here ... -->
+            <!-- ############### VS1Lab 1a Form 2 Start -->
+            <form class="discovery__search" id="discoveryFilterForm" action="/discovery" method="post">
+     
+                <!-- ... your code here ... -->
 
-                </form>
-                <!-- ############### VS1Lab 1a Form 2 End -->
+                <fieldset class="search_fieldset">
+                    <legend>Search</legend>
+                    <div class="search_field">
+                        <label for="search_input">Search term or keywords:</label>
+                        <input type="search" id="search_input" placeholder="e.g. Berlin">
 
-                <div class="discovery__wrapper">
-                    <div class="discovery__taglist">
-                        <ul class="discovery__results" id="discoveryResults">
-                            <li>Castle (49.01379, 8.404435) #sight</li>
-                            <li>IWI (49.01379, 8.390071) #edu</li>
-                        </ul>
+                        <input type="number" id="latitudeSearch" value="" hidden>
+                        <input type="number" id="longitudeSearch" value="" hidden>
+                        <button id="submit_search">Search</button>
                     </div>
+                </fieldset>
 
-                    <div class="discovery__map">
-                        <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
-                        <span>Result map</span>
-                    </div>
+            </form>
+            <!-- ############### VS1Lab 1a Form 2 End -->
+
+            <div class="discovery__wrapper">
+                <div class="discovery__taglist">
+                    <ul class="discovery__results" id="discoveryResults">
+                        <li>Castle (49.01379, 8.404435) #sight</li>
+                        <li>IWI (49.01379, 8.390071) #edu</li>
+                    </ul>
                 </div>
-            </section>
 
-        </main>
+                <div class="discovery__map">
+                    <img src="./images/mapview.jpg" alt="a map with locations" id="mapView" />
+                    <span>Result map</span>
+                </div>
+            </div>
+        </section>
 
-        <footer class="footer">
-            <span>(c) 2021/22 HKA_IWI_VSYS</span>
-        </footer>
+    </main>
+
+    <footer class="footer">
+        <span>(c) 2021/22 HKA_IWI_VSYS</span>
+    </footer>
+    <script src="./javascripts/geotagging.js"></script>
 </body>
 
 </html>
